--- a/style.css
+++ b/style.css
@@ -1,21 +1,35 @@
 *{
     font-family:Verdana, Tahoma, sans-serif ;
-    background-color: #f3e4f1;
+    background-color: #CCB0FA;
+    color: #FFFADE;
+    box-sizing: border-box;
+}
+.container{
+    border: 3px solid #FFF7D0;
+    width: 750px;
+    margin: 20px auto;
+}
+.title{
+    font-family: serif;
+    background-color: #4D30A0;
+    text-decoration: underline 2px;
+    margin: 10px 90px 30px;
+    text-align: center;
 }
 img{
     height: auto;
-    width: 500px;
+    width: 344px;
+    margin: 0px 200px 30px;
+    border: 3px solid #005B42;
 }
-h1{
-    background-color: #f0fc6d;
+.content{
     text-align: center;
+    background-color: #4D30A0;
+    margin: 0px 90px 30px;
 }
-.list.one li{
-    color: #1f66f2;
+.list{
+    margin: 0px 90px 10px;
 }
-.list.two li{
-    color: #f57f0a;
-}
-h2,h3{
-    text-decoration: underline;
+a{
+    color: #005B42;
 }
