Fix image on recipes pages
Now on the recipes page images are aligned with other block elements and not under effect from css of homepage

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     margin: 10px 90px 30px;
     text-align: center;
 }
-img{
+.homeimg{
     height: auto;
     width: 344px;
     margin: 0px 200px 30px;
